feat: replace semver4j  with maven-artifact